All CollectionUtils methods returning collections now always return unmodifiable collections